@@ -607,6 +607,7 @@ F:LOG:SYSTEM:LEVEL:CRIT
 # F:IRCD_RES_TIMEOUTS:4
 # F:IRCD_RES_RETRIES:2
 # F:AUTH_TIMEOUT:9
+# F:ANNOUNCE_INVITES:TRUE
 # F:AUTOJOIN:FALSE
 # F:AUTOJOIN_NOTICE:TRUE
 # F:AUTOJOIN_NOTICE_VALUE:"*** Notice -- You are now being autojoined into \#nefarious"
