@@ -253,6 +253,7 @@ enum Feature {
   FEAT_DNSBL_CHECKS,
   FEAT_DNSBL_EXEMPT_CLASS,
   FEAT_HIS_STATS_X,
+  FEAT_ANNOUNCE_INVITES,
 
   FEAT_LAST_F
 };
