@@ -271,6 +271,7 @@ extern const struct Numeric* get_error_numeric(int err);
 #define RPL_INVITING         341
 /*      RPL_SUMMONING        342           removed from RFC1459 */
 
+#define RPL_ISSUEDINVITE     345	/* Nefarious Extension */
 #define RPL_INVITELIST       346        /* IRCnet, Undernet extension */
 #define RPL_ENDOFINVITELIST  347        /* IRCnet, Undernet extension */
 #define RPL_EXCEPTLIST       348	/* IRCnet/Nefarious extension */
