@@ -222,7 +222,7 @@ int ms_burst(struct Client *cptr, struct Client *sptr, int parc, char *parv[])
               && (!(check_modes & MODE_OPERONLY) || IsAnOper(member->user)))
             continue;
           sendcmdto_serv_butone(&me, CMD_KICK, NULL, "%H %C :Net Rider", chptr, member->user);
-          sendcmdto_channel_butserv_butone(&me, CMD_KICK, chptr, NULL, "%H %C :Net Rider", chptr, member->user);
+          sendcmdto_channel_butserv_butone(&me, CMD_KICK, chptr, NULL, 0, "%H %C :Net Rider", chptr, member->user);
           make_zombie(member, member->user, &me, &me, chptr);
         }
       }
@@ -270,7 +270,7 @@ int ms_burst(struct Client *cptr, struct Client *sptr, int parc, char *parv[])
       *chptr->topic = '\0';
       *chptr->topic_nick = '\0';
       chptr->topic_time = 0;
-      sendcmdto_channel_butserv_butone(&me, CMD_TOPIC, chptr, NULL, 
+      sendcmdto_channel_butserv_butone(&me, CMD_TOPIC, chptr, NULL, 0, 
 				       "%H :%s", chptr, chptr->topic);
     }
   } else if (chptr->creationtime == timestamp) {
@@ -465,7 +465,7 @@ int ms_burst(struct Client *cptr, struct Client *sptr, int parc, char *parv[])
 	  }
 
 	  add_user_to_channel(chptr, acptr, default_mode);
-	  sendcmdto_channel_butserv_butone(acptr, CMD_JOIN, chptr, NULL, "%H", chptr);
+	  sendcmdto_channel_butserv_butone(acptr, CMD_JOIN, chptr, NULL, 0, "%H", chptr);
 	}
       }
       param++;
