@@ -158,7 +158,7 @@ int m_kick(struct Client *cptr, struct Client *sptr, int parc, char *parv[])
 			  comment);
 
   sendcmdto_channel_butserv_butone((IsServer(sptr) ? &me : sptr), CMD_KICK,
-				   chptr, NULL, "%H %C :%s", chptr, who,
+				   chptr, NULL, 0, "%H %C :%s", chptr, who,
 				   comment);
 
   make_zombie(member, who, cptr, sptr, chptr);
@@ -247,7 +247,7 @@ int ms_kick(struct Client *cptr, struct Client *sptr, int parc, char *parv[])
 
     if (member) { /* and tell the channel about it */
       sendcmdto_channel_butserv_butone(IsServer(sptr) ? &me : sptr, CMD_KICK,
-				       chptr, NULL, "%H %C :%s", chptr, who,
+				       chptr, NULL, 0, "%H %C :%s", chptr, who,
 				       comment);
 
       make_zombie(member, who, cptr, sptr, chptr);
