@@ -129,7 +129,7 @@ static void do_settopic(struct Client *sptr, struct Client *cptr,
      sendcmdto_serv_butone(sptr, CMD_TOPIC, cptr, "%H %Tu %Tu :%s", chptr,
 			   chptr->creationtime, chptr->topic_time, chptr->topic);
    if (newtopic)
-      sendcmdto_channel_butserv_butone(from, CMD_TOPIC, chptr, NULL,
+      sendcmdto_channel_butserv_butone(from, CMD_TOPIC, chptr, NULL, 0,
       				       "%H :%s", chptr, chptr->topic);
       /* if this is the same topic as before we send it to the person that
        * set it (so they knew it went through ok), but don't bother sending
